# c12gl

./: .gitignore  README.md  pyproject.toml  requirements.txt
c12gl/: __init__.py  dataloading.py  models.py  optimization.py  preprocessing.py  utils.py
docs/source/: api.rst  c12gl.rst  conf.py  examples.rst  index.rst  start.rst
tutorials/: create_dataset.py  train.py  train_gin.py
