[tool.poetry]
name = "c12gl"
version = "0.1.0"
description = "Python Graph Neural Network Library for CLAS12"
authors = ["Matthew McEneaney <matthew.mceneaney@duke.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.3"
awkward = "^1.8.0"
numpy = "^1.19.5"
matplotlib = "^3.4.2"
dgl = "^0.6.1"
torch = "^1.9.0"
pytorch-ignite = "^0.4.4"
optuna = "^2.8.0"
hipopy = "^1.0.1"
uproot = "^4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12", "rtd-poetry"]
build-backend = "rtd_poetry"
