[tool.poetry]
name = "c12gl"
version = "0.1.0"
description = "Python Graph Neural Network Library for CLAS12"
authors = ["Matthew McEneaney <matthew.mceneaney@duke.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
awkward = "^1.9.0"
uproot = "^4.3.5"
torch = "^1.12.1"
dgl = "^0.9.0"
hipopy = "^1.2.1"
pytorch-ignite = "^0.4.10"
optuna = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
